# ditong

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.json  config.toml
.gitea/workflows/: ci.yml  github-mirror.yml  release.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  configs.json  run.ps1  run.sh  runner.go
go/: go.mod  go.sum
go/cmd/: main.go
go/cmd/consolidate/: main.go
go/cmd/fuzzy/: main.go
go/internal/builder/: builder.go  builder_test.go  parallel.go  parallel_test.go
go/internal/config/: defaults.go
go/internal/ingest/: cursewords.go  cursewords_test.go  ingest.go  ingest_test.go  parallel.go  parallel_parse.go  parallel_parse_test.go
go/internal/ipa/: transcriber.go  transcriber_test.go
go/internal/metrics/: collector.go  metrics_test.go  reporter.go
go/internal/normalizer/: normalizer.go  normalizer_test.go
go/internal/schema/: schema.go  schema_test.go
go/internal/similarity/: bktree.go  bktree_test.go
go/internal/ui/: ui.go
python/: normalizer.py  pyproject.toml
python/builder/: __init__.py  dictionary.py  synthesis.py
python/ditong/: __init__.py  config.py  main.py  schema.py
python/ditong/ingest/: __init__.py  base.py  hunspell.py  plain_text.py
python/phonetics/: __init__.py  transcribe.py
python/tests/: __init__.py  conftest.py  test_builder.py  test_ingest.py  test_normalizer.py  test_phonetics.py  test_schema.py
scripts/: consolidate.ps1  github-init.ps1  github-init.sh
