[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ditong"
version = "0.1.0"
description = "Multi-language lexicon toolkit for building cross-language word dictionaries"
readme = "../README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Sinan Midillili", email = "sinanm89@gmail.com"}
]
keywords = [
    "lexicon",
    "dictionary",
    "linguistics",
    "nlp",
    "phonetics",
    "turkish",
    "multilingual",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
phonetics = [
    "epitran>=1.24",
    "numpy>=1.21",
]
similarity = [
    "scikit-learn>=1.0",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]
all = [
    "ditong[phonetics,similarity,dev]",
]

[project.urls]
Homepage = "https://github.com/snn/ditong"
Repository = "https://github.com/snn/ditong"
Issues = "https://github.com/snn/ditong/issues"

[project.scripts]
ditong = "ditong.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise ImportError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
